refactor: one read path for the planner catalog
The catalog had two: derived-name finders for a plain listing and a
specification search the moment any filter appeared, chosen by a
presence check on the raw parameters. Browse and search could therefore
return differently ordered pages of the same rows.

Everything composes one query; an empty filter set is the browse
listing. The finders and the projection nothing calls go with it.